@@ -42,6 +42,7 @@ OpenLDAP 2.4.41 Engineering
 	Contrib
 		Added pbkdf2 sha256 and sha512 schemes (ITS#7977)
 		Fixed autogroup modification callback responses (ITS#6970)
+		Fixed nssov compare with usergroup (ITS#8079)
 	Documentation
 		Added ldap_get_option(3) LDAP_FEATURE_INFO_VERSION information (ITS#8032)
 		Added ldap_get_option(3) LDAP_OPT_API_INFO_VERSION information (ITS#8032)
